fixed the 'git_repo' field

--- a/model_preparation_original_cellpose.ipynb
+++ b/model_preparation_original_cellpose.ipynb
@@ -260,7 +260,7 @@
     "    links=[\n",
     "        \"https://github.com/mouseland/cellpose\",\n",
     "    ],\n",
-    "    gitrepo=\"https://github.com/juglab/cellpose-bmz-wrapper\",\n",
+    "    git_repo=\"https://github.com/juglab/cellpose-bmz-wrapper\",\n",
     "    license=\"BSD-3-Clause\",\n",
     "    version=\"0.1.0\",\n",
     "    weights=weights_descr,\n",
