updated wrapper to a more BMZ friendly model

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import tifffile\n",
+    "import torch\n",
     "\n",
-    "from cellpose import models, io, plot"
+    "from cellpose import models, io, plot\n",
+    "\n",
+    "from model import CellPoseWrapper"
    ]
   },
   {
@@ -28,20 +32,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_type=\"cyto\"\n",
-    "channels=[0, 0]\n",
-    "diameter=None\n",
-    "batch_size=8\n",
-    "do_3D=False\n",
-    "\n",
-    "input_images = tiff_images[0]\n",
-    "\n",
-    "model = models.Cellpose(gpu=False, model_type=model_type)\n",
-    "masks, flows, styles, diams = model.eval(\n",
-    "    input_images, batch_size=batch_size,\n",
-    "    diameter=diameter, channels=[channels],\n",
-    "    do_3D=do_3D\n",
+    "# should be 4D and channel last\n",
+    "img_batch = torch.from_numpy(tiff_images[0:1]).unsqueeze(1).permute(0, 2, 3, 1)\n",
+    "img_batch.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CellPoseWrapper(estimate_diam=True)\n",
+    "model.load_state_dict(\n",
+    "    torch.load(\"./cellpose_models/cyto3\", map_location=model.device)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks, flows, styles, diams = model(img_batch)"
    ]
   },
   {
@@ -55,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save sample input as b,c,y,x\n",
-    "np.save(\"./input_sample.npy\", tiff_images[0:1, np.newaxis].astype(np.float32))"
+    "np.save(\"./data/input_sample.npy\", img_batch.numpy().astype(np.float32))"
    ]
   },
   {
@@ -70,58 +84,42 @@
    "outputs": [],
    "source": [
     "print(len(flows))\n",
-    "\n",
     "for flow in flows:\n",
     "    print(flow.shape, flow.dtype)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"./data/output1_sample_masks.npy\", masks.astype(np.float32))\n",
+    "np.save(\"./data/output2_sample_flows.npy\", flows)\n",
+    "np.save(\"./data/output3_sample_styles.npy\", styles)\n",
+    "np.save(\"./data/output4_sample_diams.npy\", diams.astype(np.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flows_arr = np.vstack([\n",
-    "    np.moveaxis(flows[0], 2, 0),\n",
-    "    flows[1],\n",
-    "    flows[2][np.newaxis],\n",
-    "    flows[3]\n",
-    "], dtype=np.float32)\n",
+    "image = np.load(\"./data/input_sample.npy\")[0]\n",
+    "plt.imshow(image, cmap=\"Greys_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks = np.load(\"./data/output1_sample_masks.npy\")[0]\n",
+    "masks.shape\n",
     "\n",
-    "flows_arr = flows_arr[np.newaxis]  # added batch dim\n",
-    "\n",
-    "flows_arr.shape, flows_arr.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save outputs\n",
-    "masks = np.array(masks)[np.newaxis]  # added batch dim\n",
-    "print(masks.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save(\"./output1_sample_masks.npy\", masks.astype(np.float32))\n",
-    "np.save(\"./output2_sample_flows.npy\", flows_arr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = np.load(\"./output2_sample_flows.npy\")\n",
-    "out.shape"
+    "plt.imshow(masks.T, cmap=\"tab20\", interpolation=\"none\")"
    ]
   },
   {
