--- a/model_preparation_original_cellpose.ipynb
+++ b/model_preparation_original_cellpose.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "from typing import List, Optional, Tuple, Union\n",
     "\n",
     "import numpy as np\n",
     "from bioimageio.spec.model.v0_5 import (\n",
@@ -39,6 +40,7 @@
     "    PytorchStateDictWeightsDescr,\n",
     "    SpaceInputAxis,\n",
     "    SpaceOutputAxis,\n",
+    "    IndexOutputAxis,\n",
     "    TensorId,\n",
     "    Version,\n",
     "    WeightsDescr,\n",
@@ -47,12 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# README.md file\n",
     "doc_md = \"doc.md\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Input\n",
+    "**Must have the shape of (B, Y, X, C=1)**"
    ]
   },
   {
@@ -62,20 +72,20 @@
    "outputs": [],
    "source": [
     "# model input\n",
-    "input_path = \"./input_sample.npy\"\n",
+    "input_path = \"./data/input_sample.npy\"\n",
     "input_sample = np.load(input_path)\n",
     "# building axes\n",
     "in_axes = [BatchAxis()]  # batch is always there!\n",
+    "# spatial dims\n",
+    "in_axes.append(\n",
+    "    SpaceInputAxis(id=AxisId(\"y\"), size=input_sample.shape[1])\n",
+    ")\n",
+    "in_axes.append(\n",
+    "    SpaceInputAxis(id=AxisId(\"x\"), size=input_sample.shape[2])\n",
+    ")\n",
     "# channel\n",
     "in_axes.append(\n",
     "    ChannelAxis(channel_names=[Identifier(\"channel\")])\n",
-    ")\n",
-    "# spatial dims\n",
-    "in_axes.append(\n",
-    "    SpaceInputAxis(id=AxisId(\"y\"), size=input_sample.shape[2])\n",
-    ")\n",
-    "in_axes.append(\n",
-    "    SpaceInputAxis(id=AxisId(\"x\"), size=input_sample.shape[3])\n",
     ")\n",
     "# input descriptor\n",
     "input_descr = InputTensorDescr(\n",
@@ -86,63 +96,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Outputs:\n",
+    "**masks, flows, styles, diams**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model outputs: masks and flows\n",
     "# masks\n",
-    "output1_path = \"./output1_sample_masks.npy\"\n",
-    "output1_sample = np.load(output1_path)\n",
+    "output_1_path = \"./data/output1_sample_masks.npy\"\n",
+    "output_1_sample = np.load(output_1_path)\n",
     "# building axes\n",
-    "out1_axes = [BatchAxis()]  # batch is always there!\n",
+    "out_1_axes = [BatchAxis()]  # batch is always there!\n",
     "# spatial dims\n",
-    "out1_axes.append(\n",
-    "    SpaceOutputAxis(id=AxisId(\"y\"), size=output1_sample.shape[1])\n",
+    "out_1_axes.append(\n",
+    "    SpaceOutputAxis(id=AxisId(\"y\"), size=output_1_sample.shape[1])\n",
     ")\n",
-    "out1_axes.append(\n",
-    "    SpaceOutputAxis(id=AxisId(\"x\"), size=output1_sample.shape[2])\n",
+    "out_1_axes.append(\n",
+    "    SpaceOutputAxis(id=AxisId(\"x\"), size=output_1_sample.shape[2])\n",
     ")\n",
     "# output descriptor\n",
-    "output1_descr = OutputTensorDescr(\n",
+    "output_1_descr = OutputTensorDescr(\n",
     "    id=TensorId(\"masks\"),\n",
-    "    axes=out1_axes,\n",
-    "    test_tensor=FileDescr(source=output1_path),\n",
-    ")\n",
-    "\n",
+    "    axes=out_1_axes,\n",
+    "    test_tensor=FileDescr(source=output_1_path),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# flows\n",
-    "output2_path = \"./output2_sample_flows.npy\"\n",
-    "output2_sample = np.load(output2_path)\n",
+    "output_2_path = \"./data/output2_sample_flows.npy\"\n",
+    "output_2_sample = np.load(output_2_path)\n",
     "# building axes\n",
-    "out2_axes = [BatchAxis()]  # batch is always there!\n",
+    "out_2_axes = [BatchAxis()]  # batch is always there!\n",
     "# channel\n",
-    "out2_axes.append(\n",
+    "out_2_axes.append(\n",
     "    ChannelAxis(channel_names=[\n",
     "        Identifier(f\"ch_{i}\")\n",
-    "        for i in range(output2_sample.shape[1])\n",
+    "        for i in range(output_2_sample.shape[1])\n",
     "    ])\n",
     ")\n",
     "# spatial dims\n",
-    "out2_axes.append(\n",
-    "    SpaceOutputAxis(id=AxisId(\"y\"), size=output2_sample.shape[2])\n",
+    "out_2_axes.append(\n",
+    "    SpaceOutputAxis(id=AxisId(\"y\"), size=output_2_sample.shape[2])\n",
     ")\n",
-    "out2_axes.append(\n",
-    "    SpaceOutputAxis(id=AxisId(\"x\"), size=output2_sample.shape[3])\n",
+    "out_2_axes.append(\n",
+    "    SpaceOutputAxis(id=AxisId(\"x\"), size=output_2_sample.shape[3])\n",
     ")\n",
     "# output descriptor\n",
-    "output2_descr = OutputTensorDescr(\n",
+    "output_2_descr = OutputTensorDescr(\n",
     "    id=TensorId(\"flows\"),\n",
-    "    axes=out2_axes,\n",
-    "    test_tensor=FileDescr(source=output2_path),\n",
-    ")\n"
+    "    axes=out_2_axes,\n",
+    "    test_tensor=FileDescr(source=output_2_path),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# styles\n",
+    "output_3_path = \"./data/output3_sample_styles.npy\"\n",
+    "output_3_sample = np.load(output_3_path)\n",
+    "# building axes\n",
+    "out_3_axes = [BatchAxis()]  # batch is always there!\n",
+    "# spatial dims\n",
+    "out_3_axes.append(\n",
+    "    SpaceOutputAxis(id=AxisId(\"y\"), size=output_3_sample.shape[1])\n",
+    ")\n",
+    "# output descriptor\n",
+    "output_3_descr = OutputTensorDescr(\n",
+    "    id=TensorId(\"styles\"),\n",
+    "    axes=out_3_axes,\n",
+    "    test_tensor=FileDescr(source=output_3_path),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# diams\n",
+    "output_4_path = \"./data/output4_sample_diams.npy\"\n",
+    "output_4_sample = np.load(output_4_path)\n",
+    "# building axes\n",
+    "out_4_axes = [BatchAxis()]\n",
+    "# out_4_axes.append(\n",
+    "#     SpaceOutputAxis(id=AxisId(\"y\"), size=0)\n",
+    "# )\n",
+    "# out_4_axes.append(\n",
+    "#     IndexOutputAxis(id=AxisId(\"d\"), size=0)\n",
+    "# )\n",
+    "\n",
+    "# output descriptor\n",
+    "output_4_descr = OutputTensorDescr(\n",
+    "    id=TensorId(\"diams\"),\n",
+    "    axes=out_4_axes,\n",
+    "    test_tensor=FileDescr(source=output_4_path),\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[https://bioimage-io.github.io/spec-bioimage-io/bioimageio/spec/model/v0_5.html#ArchitectureDescr](https://bioimage-io.github.io/spec-bioimage-io/bioimageio/spec/model/v0_5.html#ArchitectureDescr)"
+    "### Model's Architecture & Weights description"
    ]
   },
   {
@@ -152,7 +225,7 @@
    "outputs": [],
    "source": [
     "# model arch & weights\n",
-    "model_weights_file = Path(\"./model_weights.pth\")\n",
+    "model_weights_file = Path(\"cellpose_models/cyto3.pth\")\n",
     "\n",
     "model_src_file = \"./model.py\"\n",
     "with open(model_src_file, \"rb\") as f:\n",
@@ -161,11 +234,16 @@
     "\n",
     "# params to instantiate the model (pass to __init__)\n",
     "model_kwargs = {\n",
-    "    \"model_type\": \"cyto\",\n",
+    "    \"diam_mean\": 30.,\n",
+    "    \"cp_batch_size\": 8,\n",
     "    \"channels\": [0, 0],\n",
-    "    \"diameter\": None,\n",
-    "    \"batch_size\": 8,\n",
-    "    \"do_3D\": False\n",
+    "    \"flow_threshold\": 0.4,\n",
+    "    \"cellprob_threshold\": 0.0,\n",
+    "    \"stitch_threshold\": 0.0,\n",
+    "    \"estimate_diam\": True,\n",
+    "    \"normalize\": True,\n",
+    "    \"do_3D\": False,\n",
+    "    \"gpu\": True\n",
     "}\n",
     "\n",
     "arch_descr = ArchitectureFromFileDescr(\n",
@@ -189,8 +267,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Authors and Citations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,6 +327,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Model Description"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -249,22 +341,22 @@
    "source": [
     "# model\n",
     "model_descr = ModelDescr(\n",
-    "    name=\"CellPose(cyto)\",\n",
+    "    name=\"CellPose(cyto3)\",\n",
     "    authors=authors,\n",
-    "    description=\"CellPose 'cyto' model\",\n",
+    "    description=\"CellPose 'cyto3' model\",\n",
     "    documentation=doc_md,\n",
     "    inputs=[input_descr],\n",
-    "    outputs=[output1_descr, output2_descr],\n",
-    "    tags=[\"Cell Segmentation\", \"Segmentation\"],\n",
-    "    # covers=[\"cover1.png\"],\n",
+    "    outputs=[output_1_descr, output_2_descr, output_3_descr, output_4_descr],\n",
+    "    tags=[\"Cellpose\", \"Cell Segmentation\", \"Segmentation\"],\n",
     "    links=[\n",
     "        \"https://github.com/mouseland/cellpose\",\n",
     "    ],\n",
-    "    git_repo=\"https://github.com/juglab/cellpose-bmz-wrapper\",\n",
     "    license=\"BSD-3-Clause\",\n",
+    "    git_repo=\"https://github.com/juglab/cellpose-bmz-wrapper\",\n",
     "    version=\"0.1.0\",\n",
     "    weights=weights_descr,\n",
     "    cite=[citation],\n",
+    "    covers=[\"cover.png\"]\n",
     ")"
    ]
   },
@@ -297,7 +389,7 @@
    "source": [
     "from bioimageio.spec import save_bioimageio_package\n",
     "\n",
-    "save_bioimageio_package(model_descr, output_path=Path(\"cellpose.zip\"))"
+    "save_bioimageio_package(model_descr, output_path=Path(\"cellpose_cyto3.zip\"))"
    ]
   },
   {
