changed env.yml to environment.yml

--- a/model_preparation_cellpose.ipynb
+++ b/model_preparation_cellpose.ipynb
@@ -254,7 +254,7 @@
     ")\n",
     "\n",
     "pytorch_version = str(torch.__version__)\n",
-    "env_path = \"./env.yml\"\n",
+    "env_path = \"./environment.yml\"\n",
     "\n",
     "weights_descr = WeightsDescr(\n",
     "    pytorch_state_dict=PytorchStateDictWeightsDescr(\n",
