fixed input/output shape and specs; updated to Cellpose 3.1

--- a/model_preparation_cellpose.ipynb
+++ b/model_preparation_cellpose.ipynb
@@ -53,6 +53,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(13)\n",
+    "torch.manual_seed(13)\n",
+    "torch.cuda.manual_seed(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# README.md file\n",
     "doc_md = \"doc.md\""
    ]
@@ -61,8 +72,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Authors and Citations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# authors\n",
+    "au1 = Author(\n",
+    "    name=\"John Doe\",\n",
+    "    email=None,\n",
+    "    affiliation=None,\n",
+    "    orcid=None,\n",
+    "    github_user=None\n",
+    ")\n",
+    "\n",
+    "authors = [au1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citation1 = CiteEntry(\n",
+    "    text=\"\"\"Stringer, C., Wang, T., Michaelos, M. et al. Cellpose: a generalist algorithm for cellular segmentation. Nat Methods 18, 100–106 (2021).\"\"\",\n",
+    "    doi=\"10.1038/s41592-020-01018-x\"\n",
+    ")\n",
+    "\n",
+    "citation2 = CiteEntry(\n",
+    "    text=\"\"\"Pachitariu, M., Stringer, C. Cellpose 2.0: how to train your own model. Nat Methods 19, 1634–1641 (2022).\"\"\",\n",
+    "    doi=\"10.1038/s41592-022-01663-4\"\n",
+    ")\n",
+    "\n",
+    "citation3 = CiteEntry(\n",
+    "    text=\"\"\"Stringer, Carsen, and Marius Pachitariu. \"Cellpose3: one-click image restoration for improved cellular segmentation.\" bioRxiv (2024).\"\"\",\n",
+    "    doi=\"10.1101/2024.02.10.579780\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Model Input\n",
-    "**Must have the shape of (B, Y, X, C=1)**"
+    "**Must have the shape of (B, C=1, Y, X)**"
    ]
   },
   {
@@ -74,25 +132,27 @@
     "# model input\n",
     "input_path = \"./data/input_sample.npy\"\n",
     "input_sample = np.load(input_path)\n",
+    "# print(input_sample.shape)\n",
+    "\n",
     "# building axes\n",
     "in_axes = [BatchAxis()]  # batch is always there!\n",
-    "# spatial dims\n",
-    "in_axes.append(\n",
-    "    SpaceInputAxis(id=AxisId(\"y\"), size=input_sample.shape[1])\n",
-    ")\n",
-    "in_axes.append(\n",
-    "    SpaceInputAxis(id=AxisId(\"x\"), size=input_sample.shape[2])\n",
-    ")\n",
     "# channel\n",
     "in_axes.append(\n",
     "    ChannelAxis(channel_names=[Identifier(\"channel\")])\n",
+    ")\n",
+    "# spatial dims\n",
+    "in_axes.append(\n",
+    "    SpaceInputAxis(id=AxisId(\"y\"), size=input_sample.shape[2])\n",
+    ")\n",
+    "in_axes.append(\n",
+    "    SpaceInputAxis(id=AxisId(\"x\"), size=input_sample.shape[3])\n",
     ")\n",
     "# input descriptor\n",
     "input_descr = InputTensorDescr(\n",
     "    id=TensorId(\"input\"),\n",
     "    axes=in_axes,\n",
     "    test_tensor=FileDescr(source=input_path),\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -110,8 +170,9 @@
    "outputs": [],
    "source": [
     "# masks\n",
-    "output_1_path = \"./data/output1_sample_masks.npy\"\n",
+    "output_1_path = \"./data/output_sample1_masks.npy\"\n",
     "output_1_sample = np.load(output_1_path)\n",
+    "# print(output_1_sample.shape)\n",
     "# building axes\n",
     "out_1_axes = [BatchAxis()]  # batch is always there!\n",
     "# spatial dims\n",
@@ -136,7 +197,7 @@
    "outputs": [],
    "source": [
     "# flows\n",
-    "output_2_path = \"./data/output2_sample_flows.npy\"\n",
+    "output_2_path = \"./data/output_sample2_flows.npy\"\n",
     "output_2_sample = np.load(output_2_path)\n",
     "# building axes\n",
     "out_2_axes = [BatchAxis()]  # batch is always there!\n",
@@ -169,7 +230,7 @@
    "outputs": [],
    "source": [
     "# styles\n",
-    "output_3_path = \"./data/output3_sample_styles.npy\"\n",
+    "output_3_path = \"./data/output_sample3_styles.npy\"\n",
     "output_3_sample = np.load(output_3_path)\n",
     "# building axes\n",
     "out_3_axes = [BatchAxis()]  # batch is always there!\n",
@@ -192,17 +253,11 @@
    "outputs": [],
    "source": [
     "# diams\n",
-    "output_4_path = \"./data/output4_sample_diams.npy\"\n",
+    "output_4_path = \"./data/output_sample4_diams.npy\"\n",
     "output_4_sample = np.load(output_4_path)\n",
+    "print(output_4_sample.shape)\n",
     "# building axes\n",
-    "out_4_axes = [BatchAxis()]\n",
-    "# out_4_axes.append(\n",
-    "#     SpaceOutputAxis(id=AxisId(\"y\"), size=0)\n",
-    "# )\n",
-    "# out_4_axes.append(\n",
-    "#     IndexOutputAxis(id=AxisId(\"d\"), size=0)\n",
-    "# )\n",
-    "\n",
+    "out_4_axes = [BatchAxis(), SpaceOutputAxis(id=AxisId(\"y\"), size=1)]\n",
     "# output descriptor\n",
     "output_4_descr = OutputTensorDescr(\n",
     "    id=TensorId(\"diams\"),\n",
@@ -225,7 +280,7 @@
    "outputs": [],
    "source": [
     "# model arch & weights\n",
-    "model_weights_file = Path(\"cellpose_models/cyto3.pth\")\n",
+    "model_weights_file = Path(\"./cellpose_models/cyto3.pth\")\n",
     "\n",
     "model_src_file = \"./model.py\"\n",
     "with open(model_src_file, \"rb\") as f:\n",
@@ -243,7 +298,7 @@
     "    \"estimate_diam\": True,\n",
     "    \"normalize\": True,\n",
     "    \"do_3D\": False,\n",
-    "    \"gpu\": True\n",
+    "    \"gpu\": False\n",
     "}\n",
     "\n",
     "arch_descr = ArchitectureFromFileDescr(\n",
@@ -263,66 +318,6 @@
     "        pytorch_version=Version(pytorch_version),\n",
     "        dependencies=EnvironmentFileDescr(source=env_path),\n",
     "    ),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Authors and Citations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# authors\n",
-    "au1 = Author(\n",
-    "    name=\"Carsen Stringer\",\n",
-    "    email=None,\n",
-    "    affiliation=\"HHMI Janelia Research Campus\",\n",
-    "    orcid=None,\n",
-    "    github_user=None\n",
-    ")\n",
-    "au2 = Author(\n",
-    "    name=\"Tim Wang\",\n",
-    "    email=None,\n",
-    "    affiliation=None,\n",
-    "    orcid=None,\n",
-    "    github_user=None\n",
-    ")\n",
-    "\n",
-    "au3 = Author(\n",
-    "    name=\"Michalis Michaelos\",\n",
-    "    email=None,\n",
-    "    affiliation=None,\n",
-    "    orcid=None,\n",
-    "    github_user=None\n",
-    ")\n",
-    "\n",
-    "au4 = Author(\n",
-    "    name=\"Marius Pachitariu\",\n",
-    "    email=None,\n",
-    "    affiliation=None,\n",
-    "    orcid=None,\n",
-    "    github_user=None\n",
-    ")\n",
-    "\n",
-    "authors = [au1, au2, au3, au4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "citation = CiteEntry(\n",
-    "    text=\"\"\"Stringer, C., Wang, T., Michaelos, M., & Pachitariu, M. (2021). Cellpose: a generalist algorithm for cellular segmentation. Nature methods, 18(1), 100-106.\"\"\",\n",
-    "    doi=\"10.1038/s41592-020-01018-x\"\n",
     ")"
    ]
   },
@@ -355,7 +350,7 @@
     "    git_repo=\"https://github.com/juglab/cellpose-bmz-wrapper\",\n",
     "    version=\"0.1.0\",\n",
     "    weights=weights_descr,\n",
-    "    cite=[citation],\n",
+    "    cite=[citation1, citation2, citation3],\n",
     "    covers=[\"cover.png\"]\n",
     ")"
    ]
@@ -402,7 +397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai4life",
+   "display_name": "biocore2",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
