--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiff_images = tifffile.imread(\"./data/test_images.tif\", dtype=np.uint8)\n",
+    "tiff_images = tifffile.imread(\"./data/test_images.tif\")\n",
     "print(tiff_images.shape)"
    ]
   },
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# should be 4D and channel last\n",
-    "img_batch = torch.from_numpy(tiff_images[0:1]).unsqueeze(1).permute(0, 2, 3, 1)\n",
+    "img_batch = torch.from_numpy(tiff_images[0:1]).unsqueeze(1)\n",
     "img_batch.shape"
    ]
   },
@@ -43,15 +43,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CellPoseWrapper(estimate_diam=True)\n",
+    "model = CellPoseWrapper(estimate_diam=True, gpu=False)\n",
     "model.load_state_dict(\n",
-    "    torch.load(\"./cellpose_models/cyto3\", map_location=model.device)\n",
+    "    torch.load(\"../original/cellpose_models/cyto3\", map_location=model.device)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"./data/output1_sample_masks.npy\", masks.astype(np.float32))\n",
-    "np.save(\"./data/output2_sample_flows.npy\", flows)\n",
-    "np.save(\"./data/output3_sample_styles.npy\", styles)\n",
-    "np.save(\"./data/output4_sample_diams.npy\", diams.astype(np.float32))"
+    "np.save(\"./data/output_sample1_masks.npy\", masks.astype(np.float32))\n",
+    "np.save(\"./data/output_sample2_flows.npy\", flows)\n",
+    "np.save(\"./data/output_sample3_styles.npy\", styles)\n",
+    "np.save(\"./data/output_sample4_diams.npy\", diams.astype(np.float32))"
    ]
   },
   {
@@ -116,10 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = np.load(\"./data/output1_sample_masks.npy\")[0]\n",
+    "masks = np.load(\"./data/output_sample1_masks.npy\")[0]\n",
     "masks.shape\n",
     "\n",
-    "plt.imshow(masks.T, cmap=\"tab20\", interpolation=\"none\")"
+    "plt.imshow(masks[0], cmap=\"tab20\", interpolation=\"none\")"
    ]
   },
   {
@@ -132,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cellpose",
+   "display_name": "biocore2",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
