set diam_mean based on mode_type

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -43,7 +43,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CellPoseWrapper(estimate_diam=True, gpu=False)\n",
+    "# save sample input as b,c,y,x\n",
+    "np.save(\"./data/input_sample.npy\", img_batch.numpy().astype(np.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CellPoseWrapper(model_type=\"cyto3\", estimate_diam=True, gpu=False)\n",
     "model.load_state_dict(\n",
     "    torch.load(\"../original/cellpose_models/cyto3\", map_location=model.device)\n",
     ")"
@@ -73,8 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save sample input as b,c,y,x\n",
-    "np.save(\"./data/input_sample.npy\", img_batch.numpy().astype(np.float32))"
+    "print(len(flows))\n",
+    "for flow in flows:\n",
+    "    print(flow.shape, flow.dtype)"
    ]
   },
   {
@@ -83,9 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(flows))\n",
-    "for flow in flows:\n",
-    "    print(flow.shape, flow.dtype)"
+    "diams, diams.shape"
    ]
   },
   {
@@ -106,8 +115,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = np.load(\"./data/input_sample.npy\")[0]\n",
-    "plt.imshow(image, cmap=\"Greys_r\")"
+    "image = np.load(\"./data/input_sample.npy\")\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(7, 7))\n",
+    "ax.imshow(image[0, 0], cmap=\"Greys_r\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -116,10 +129,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks = np.load(\"./data/output_sample1_masks.npy\")[0]\n",
-    "masks.shape\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(7, 7))\n",
     "\n",
-    "plt.imshow(masks[0], cmap=\"tab20\", interpolation=\"none\")"
+    "ax.imshow(image[0, 0], cmap=\"Greys_r\")\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(masks[0] == 0, masks[0]),\n",
+    "    cmap=\"tab20\", interpolation=\"none\", alpha=0.65\n",
+    ")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
