--- a/model_preparation_cellpose.ipynb
+++ b/model_preparation_cellpose.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +289,7 @@
     "\n",
     "# params to instantiate the model (pass to __init__)\n",
     "model_kwargs = {\n",
+    "    \"model_type\": \"cyto3\",\n",
     "    \"diam_mean\": 30.,\n",
     "    \"cp_batch_size\": 8,\n",
     "    \"channels\": [0, 0],\n",
@@ -336,6 +337,7 @@
    "source": [
     "# model\n",
     "model_descr = ModelDescr(\n",
+    "    id=\"famous-fish\",\n",
     "    name=\"CellPose(cyto3)\",\n",
     "    authors=authors,\n",
     "    description=\"CellPose 'cyto3' model\",\n",
@@ -384,7 +386,7 @@
    "source": [
     "from bioimageio.spec import save_bioimageio_package\n",
     "\n",
-    "save_bioimageio_package(model_descr, output_path=Path(\"cellpose_cyto3.zip\"))"
+    "save_bioimageio_package(model_descr, output_path=Path(\"Cellpose_cyto3.zip\"))"
    ]
   },
   {
